5. Добавлены привелегии для ролей, возможность возврата сообщений с ошибками при выполнении запросов