@@ -12,9 +12,9 @@ import org.springframework.security.core.userdetails.UserDetailsService;
 import org.springframework.security.core.userdetails.UsernameNotFoundException;
 import org.springframework.stereotype.Service;
 
+import java.util.ArrayList;
 import java.util.Collection;
-import java.util.Set;
-import java.util.stream.Collectors;
+import java.util.List;
 
 
 @Service
@@ -30,11 +30,20 @@ public class CustomUserDetailsService implements UserDetailsService {
     @Override
     public UserDetails loadUserByUsername(String username) throws UsernameNotFoundException {
         UserEntity user = userRepository.findByName(username).orElseThrow(() -> new UsernameNotFoundException("No such user"));
-        return new User(user.getName(), user.getPassword(), mapRolesToAuthorities(user.getRoleSet()));
+        return new User(user.getName(), user.getPassword(), getAuthorities(user.getRoleSet()));
     }
 
-    private Collection<GrantedAuthority> mapRolesToAuthorities(Set<Role> roles) {
-        return roles.stream().map(role -> new SimpleGrantedAuthority(role.getName())).collect(Collectors.toList());
+    private Collection<? extends GrantedAuthority> getAuthorities(
+            Collection<Role> roles) {
+        List<GrantedAuthority> authorities = new ArrayList<>();
+        for (Role role : roles) {
+            authorities.add(new SimpleGrantedAuthority(role.getName()));
+            authorities.addAll(role.getPrivilegeSet()
+                    .stream()
+                    .map(p -> new SimpleGrantedAuthority(p.getName()))
+                    .toList());
+        }
+
+        return authorities;
     }
-    
 }
